<?xml version='1.0' encoding='utf-8' ?>
<resources>
  <string name="abc_action_bar_up_description">Navigate up</string>
  <string name="abc_action_mode_done">Done</string>
  <string name="abc_capital_off">OFF</string>
  <string name="abc_capital_on">ON</string>
  <string name="abc_menu_alt_shortcut_label">Alt+</string>
  <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
  <string name="abc_menu_delete_shortcut_label">delete</string>
  <string name="abc_menu_enter_shortcut_label">enter</string>
  <string name="abc_menu_function_shortcut_label">Function+</string>
  <string name="abc_menu_meta_shortcut_label">Meta+</string>
  <string name="abc_menu_shift_shortcut_label">Shift+</string>
  <string name="abc_menu_space_shortcut_label">space</string>
  <string name="abc_menu_sym_shortcut_label">Sym+</string>
  <string name="abc_prepend_shortcut_label">Menu+</string>
  <string name="abc_search_hint">Search…</string>
  <string name="abc_searchview_description_clear">Clear query</string>
  <string name="abc_searchview_description_search">Search</string>
  <string name="abc_searchview_description_submit">Submit query</string>
  <string name="abc_searchview_description_voice">Voice search</string>
  <string name="abc_toolbar_collapse_description">Collapse</string>
  <string name="action_close">Close</string>
  <string name="action_go_back">Go Back</string>
  <string name="action_go_forward">Go Forward</string>
  <string name="action_reload">Reload</string>
  <string name="action_share">Share</string>
  <string name="androidx_startup">androidx.startup</string>
  <string name="call_notification_answer_action">Answer</string>
  <string name="call_notification_answer_video_action">Video</string>
  <string name="call_notification_decline_action">Decline</string>
  <string name="call_notification_hang_up_action">Hang Up</string>
  <string name="call_notification_incoming_text">Incoming call</string>
  <string name="call_notification_ongoing_text">Ongoing call</string>
  <string name="call_notification_screening_text">Screening an incoming call</string>
  <string name="com.crashlytics.android.build_id">9f53dc4ce83e408c9e33b8421e4e3e3a</string>
  <string name="common_google_play_services_enable_button">Enable</string>
  <string name="common_google_play_services_enable_text">%1$s won't work unless you enable Google Play services.</string>
  <string name="common_google_play_services_enable_title">Enable Google Play services</string>
  <string name="common_google_play_services_install_button">Install</string>
  <string name="common_google_play_services_install_text">%1$s won't run without Google Play services, which are missing from your device.</string>
  <string name="common_google_play_services_install_title">Get Google Play services</string>
  <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
  <string name="common_google_play_services_notification_ticker">Google Play services error</string>
  <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
  <string name="common_google_play_services_unsupported_text">%1$s won't run without Google Play services, which are not supported by your device.</string>
  <string name="common_google_play_services_update_button">Update</string>
  <string name="common_google_play_services_update_text">%1$s won't run unless you update Google Play services.</string>
  <string name="common_google_play_services_update_title">Update Google Play services</string>
  <string name="common_google_play_services_updating_text">%1$s won't run without Google Play services, which are currently updating.</string>
  <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
  <string name="common_open_on_phone">Open on phone</string>
  <string name="common_signin_button_text">Sign in</string>
  <string name="common_signin_button_text_long">Sign in with Google</string>
  <string name="copy">Copy</string>
  <string name="copy_toast_msg">Link copied to clipboard</string>
  <string name="default_web_client_id">1059176265178-7p9hupatect8j1i9o08ci30et6e2e34k.apps.googleusercontent.com</string>
  <string name="expand_button_title">Advanced</string>
  <string name="fallback_menu_item_copy_link">Copy link</string>
  <string name="fallback_menu_item_open_in_browser">Open in browser</string>
  <string name="fallback_menu_item_share_link">Share link</string>
  <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
  <string name="firebase_database_url">https://discord-bot-designer.firebaseio.com</string>
  <string name="gcm_defaultSenderId">1059176265178</string>
  <string name="google_api_key">AIzaSyDHUjMDHY1hcqQXTIweM8zbyrm415BG5R0</string>
  <string name="google_app_id">1:1059176265178:android:5d74f74e38fa05a6</string>
  <string name="google_crash_reporting_api_key">AIzaSyDHUjMDHY1hcqQXTIweM8zbyrm415BG5R0</string>
  <string name="google_storage_bucket">discord-bot-designer.appspot.com</string>
  <string name="menu_search">Search</string>
  <string name="native_body">Body</string>
  <string name="native_headline">Headline</string>
  <string name="native_media_view">Media View</string>
  <string name="not_set">Not set</string>
  <string name="notifications_permission_confirm">Allow</string>
  <string name="notifications_permission_decline">Don't allow</string>
  <string name="notifications_permission_title">Allow app to send you notifications?</string>
  <string name="offline_dialog_image_description">Icon</string>
  <string name="offline_dialog_text">Thanks for your interest.
We will share more once you're back online.</string>
  <string name="offline_notification_title">You are back online! Let's pick up where we left off</string>
  <string name="offline_notification_title_with_advertiser">You are back online! Continue learning about %s</string>
  <string name="offline_opt_in_confirm">OK</string>
  <string name="offline_opt_in_decline">No thanks</string>
  <string name="offline_opt_in_message">We'll send you a notification with a link to the advertiser site.</string>
  <string name="offline_opt_in_title">Open ad when you're back online.</string>
  <string name="project_id">discord-bot-designer</string>
  <string name="s1">Save image</string>
  <string name="s2">Allow Ad to store image in Picture gallery?</string>
  <string name="s3">Accept</string>
  <string name="s4">Decline</string>
  <string name="s5">Create calendar event</string>
  <string name="s6">Allow Ad to create a calendar event?</string>
  <string name="s7">Test Ad</string>
  <string name="search_menu_title">Search</string>
  <string name="status_bar_notification_info_overflow">999+</string>
  <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
  <string name="v7_preference_off">OFF</string>
  <string name="v7_preference_on">ON</string>
  <string name="watermark_label_prefix">AdMob - </string>
</resources>