<?xml version='1.0' encoding='utf-8' ?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:discordbotdesinger="http://schemas.android.com/apk/res-auto">
  <item android:id="@id/action_go_back"
        android:orderInCategory="100"
        android:title="@string/action_go_back"
        android:onClick="goBackButtonClicked"
        discordbotdesinger:showAsAction="never" />
  <item android:id="@id/action_go_forward"
        android:orderInCategory="101"
        android:title="@string/action_go_forward"
        android:onClick="goForwardButtonClicked"
        discordbotdesinger:showAsAction="never" />
  <item android:id="@id/action_share"
        android:orderInCategory="102"
        android:title="@string/action_share"
        android:onClick="shareButtonClicked"
        discordbotdesinger:showAsAction="never" />
  <item android:id="@id/action_reload"
        android:orderInCategory="103"
        android:title="@string/action_reload"
        android:onClick="reloadButtonClicked"
        discordbotdesinger:showAsAction="never" />
  <item android:id="@id/action_close"
        android:orderInCategory="104"
        android:title="@string/action_close"
        android:onClick="closeButtonClicked"
        discordbotdesinger:showAsAction="never" />
  <item android:id="@id/menu_search"
        android:title="@string/menu_search"
        discordbotdesinger:actionViewClass="android.widget.SearchView"
        discordbotdesinger:showAsAction="ifRoom|withText" />
</menu>